fix mark up to link positioning on mobile

--- a/src/main/webapp/sass/mobile/_mobile.scss
+++ b/src/main/webapp/sass/mobile/_mobile.scss
@@ -43,6 +43,10 @@
 	#feed-accordion .tags-panel {
 		display: block;
 	}
+	#feed-accordion a.mark-up-to {
+		right: 15px;
+		margin-top: -18px;
+	}
 	body.left-menu-active .left-menu {
 		display: block !important;
 		width: 100%;
